fix title bar clipping

--- a/public/css/FacsEditor.css
+++ b/public/css/FacsEditor.css
@@ -29,7 +29,3 @@
     margin-right: 20px;
     margin-bottom: 20px;
 }
-
-#FacsEditor .editor {
-    background: #ccc;
-}
